2012-12-25 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.20

	* add missing trailing semicolons to XDG *.desktop files
	  (from Denis Silakov)

2012-12-19 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.19

	* rewrite check_elf_files in shell script
	* skip symlinks for fix_eol

2012-12-19 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.18

	* make sure fix_eol doesn't exit with error code

2012-12-19 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.17

	* rewrite fix_eol in shell script
	* rewrite clean_files script in shell script
	* free gprintify from dependency on perl(List::MoreUtils)

2012-09-25 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.16

	* get rid of .la symlinks as well
	* don't relativize symlinks to /dev, /proc & /sys (inspired by similar change
	  by colin in Mageia)
	* drop dead 'translate_menu' script
	* rewrite 'relink_symlinks' perl script in shell

2012-06-06 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.13.15

	* handle both /sbin/install-info & /usr/sbin/install-info

2012-06-04 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.13.14

	* /sbin/install-info has been moved to /usr/sbin/install-info
	
2012-03-20 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.13.13

	* don't remove /usr/share/info/dir if /sbin/install-info is found in
	  buildroot

2012-03-16 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.13.12
	* remove all .la files

2012-03-10 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.31.11
	* make sure that shared libraries & mono libraries/executables have
	  executable permissions set

2011-12-23 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.31.10
	* support multiple libtool files with multiple pkgconfig files

2011-12-22 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.31.9
	* don't remove libtool .la files which has 'shouldnotlink=yes' set
	  (thx Buchan!)

2011-12-08 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.31.8
	* fix error message printed when there's no pkgconfig dir

2011-12-06 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.31.7