@@ -1,8 +1,8 @@
 PACKAGE = spec-helper
-VERSION = 0.31.20
+VERSION = 0.31.21
 SVNPATH = svn+ssh://svn.mandriva.com/svn/soft/rpm/$(PACKAGE)
 
-SCRIPT_FILES =  clean_files clean_perl compress_files check_elf_files \
+SCRIPT_FILES =  clean_files clean_perl check_elf_files \
 		lib_symlinks fix_file_permissions fix_mo fix_xdg fix_pamd gprintify \
 		remove_info_dir remove_libtool_files relink_symlinks fix_eol
 BIN_FILES    = macroszification
