@@ -1,3 +1,7 @@
+2012-12-26 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.21
+
+	* drop compress-files in favour of upstream brp-compress
+
 2012-12-25 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.20
 
 	* add missing trailing semicolons to XDG *.desktop files
